samples/_failures_safe/1761210459_08efd2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_82781c7b.c: In function ‘main’:
./samples/SAFE/__tmp_82781c7b.c:143:5: error: expected identifier or ‘(’ at end of input
  143 |     int
      |     ^~~
./samples/SAFE/__tmp_82781c7b.c:143:5: error: expected declaration or statement at end of input
